visibility fix

--- a/mystyle.css
+++ b/mystyle.css
@@ -135,7 +135,7 @@
 #circularcursor {
   background-color: var(--alphacol);
   backdrop-filter: blur(12px);
-  border:3px solid var(--txtcolinv);    
+  border:3px solid var(--txtcol);    
   height:30px;
   width:30px;
   border-radius:50%;
